objects/Initiative__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <inlineHelpText>Detailed description of the event or initiative</inlineHelpText>
    <label>Detailed Description</label>
    <type>TextArea</type>
</CustomField>