objects/Initiative__c/fields/Estimate_how_many_students_CY_supported__c.field-meta.xml
<CustomField>
    <fullName>Estimate_how_many_students_CY_supported__c</fullName>
    <label>Estimate how many students CY supported</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>