objects/Initiative__c/fields/Estimate_of_community_members_attended__c.field-meta.xml
<CustomField>
    <fullName>Estimate_of_community_members_attended__c</fullName>
    <label>Estimate # of community members attended</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>