objects/Initiative__c/fields/Indicator_area_s_or_category__c.field-meta.xml
<CustomField>
    <fullName>Indicator_area_s_or_category__c</fullName>
    <label>Indicator area(s) or category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>ELA/Literacy</fullName>
            </value>
            <value>
                <fullName>SEL/SED</fullName>
            </value>
            <value>
                <fullName>Attendance</fullName>
            </value>
            <value>
                <fullName>School Culture &amp; Climate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>