objects/Initiative__c/fields/Initiative_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Auto_Number__c</fullName>
    <displayFormat>IAN-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Initiative Auto Number</label>
    <type>AutoNumber</type>
</CustomField>