objects/Initiative__c/fields/Number_of_volunteers_outside_City_Year__c.field-meta.xml
<CustomField>
    <fullName>Number_of_volunteers_outside_City_Year__c</fullName>
    <label>Number of volunteers outside City Year</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>