objects/Initiative__c/fields/Sponsors_or_external_partners__c.field-meta.xml
<CustomField>
    <fullName>Sponsors_or_external_partners__c</fullName>
    <label>Sponsors or external partners</label>
    <type>TextArea</type>
</CustomField>