objects/Initiative__c/fields/What_is_being_captured__c.field-meta.xml
<CustomField>
    <fullName>What_is_being_captured__c</fullName>
    <label>What is being captured?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event (Occurred in a single day)</fullName>
            </value>
            <value>
                <fullName>Initiative (repeated activity over multiple days, weeks, or months)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>