objects/Initiative__c/fields/What_was_City_Year_s_involvement__c.field-meta.xml
<CustomField>
    <fullName>What_was_City_Year_s_involvement__c</fullName>
    <label>What was City Year&apos;s involvement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Led this event or initiative (Design, Plan, Coordinate, Execute)</fullName>
            </value>
            <value>
                <fullName>Provide support for this event or initiative (Plug into a preexisting event or initiative)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>