objects/Initiative__c/fields/When_did_the_event_initiative_end__c.field-meta.xml
<CustomField>
    <fullName>When_did_the_event_initiative_end__c</fullName>
    <label>When did the event/initiative end?</label>
    <type>DateTime</type>
</CustomField>