objects/Initiative__c/fields/When_did_the_event_initiative_start__c.field-meta.xml
<CustomField>
    <fullName>When_did_the_event_initiative_start__c</fullName>
    <label>When did the event/initiative start?</label>
    <type>DateTime</type>
</CustomField>