objects/Initiative__c/fields/When_did_this_take_place__c.field-meta.xml
<CustomField>
    <fullName>When_did_this_take_place__c</fullName>
    <label>When did this take place?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Before school</fullName>
            </value>
            <value>
                <fullName>During the school day (in-school)</fullName>
            </value>
            <value>
                <fullName>Afterschool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>