objects/Initiative__c/recordTypes/City_Year_Led.recordType-meta.xml
<RecordType>
    <fullName>City_Year_Led</fullName>
    <active>true</active>
    <label>City Year Led</label>
</RecordType>