objects/Initiative__c/recordTypes/Community_Led.recordType-meta.xml
<RecordType>
    <fullName>Community_Led</fullName>
    <active>true</active>
    <label>Community Led</label>
</RecordType>