objects/Initiative__c/listViews/My_Initiatives.listView-meta.xml
<ListView>
    <fullName>My_Initiatives</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Detailed_Description__c</columns>
    <columns>When_did_the_event_initiative_start__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Initiatives</label>
</ListView>